# ai-helper

./: .gitignore  Cargo.toml  Prompt.md  README.md
crates/app-shell/: Cargo.toml
crates/app-shell/src/: main.rs
crates/automation-engine/: Cargo.toml
crates/automation-engine/src/: lib.rs  types.rs
crates/integration-ipc/: Cargo.toml
crates/integration-ipc/src/: lib.rs
crates/script-manager/: Cargo.toml
crates/script-manager/src/: lib.rs
crates/secure-vault/: Cargo.toml
crates/secure-vault/src/: lib.rs
docs/: architecture.md  module-guides.md
src/: lib.rs  main.rs
src/automation/: mod.rs  types.rs
src/integration/: mod.rs
src/script_manager/: mod.rs
src/secure_storage/: mod.rs
