[package]
name = "ai-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"

[features]
# Placeholder feature flags to toggle implementations (e.g., "tauri", "android", "ios").
default = []
tauri = []
android = []
ios = []

